--- a/ultimate-datalayer.liquid
+++ b/ultimate-datalayer.liquid
@@ -12,7 +12,7 @@
           window.dataLayer = window.dataLayer || []; 
           
           // use a prefix of events name
-          this.eventPrefix = '';
+          this.eventPrefix = 'tbgtm_';
 
           //Keep the value false to get non-formatted product ID
           this.formattedItemId = true; 
